# fuzztest-rs

./: .travis.yml  Cargo.toml  README.md  test.sh
example/: Cargo.toml  test.sh
example/src/: main.rs
src/: lib.rs
