[package]
name = "fuzztest"
version = "0.1.1"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
license = "MIT/Apache-2.0/Unlicense/WTFPL"
repository = "https://github.com/PaulGrandperrin/fuzztest-rs"
documentation = "https://docs.rs/fuzztest"
homepage = "https://github.com/PaulGrandperrin/fuzztest-rs/blob/master/README.md"
readme = "README.md"
keywords = ["testing", "fuzz", "fuzzing", "property", "quickcheck"]
categories = ["development-tools::testing"]
description = """
Easily test your software using powerful evolutionary, feedback-driven fuzzing technology.
"""

[badges]
travis-ci = { repository = "PaulGrandperrin/fuzztest-rs", branch = "master" }
maintenance = { status = "experimental" }

[features]
default = ["nightly"]
nightly = ["lazy_static/nightly"]

[dependencies]
lazy_static = "1.0"
honggfuzz = "0.5.11"
